--- a/front-end/appz/angular.json
+++ b/front-end/appz/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2cf1047a-e9b8-4ffb-bed0-8acb5c9ed9b9"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
