--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 spring.main.allow-circular-references=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dwelling.sender.appz@gmail.com
+spring.mail.password=opltfouuchocrvpp
+spring.mail.protocol=smtp
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.dwelling.subject=Dwelling notification
